# goit-pyweb-hw-02

./: Dockerfile  main.py  pyproject.toml
