[project]
name = "assistant-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "datetime (>=5.5,<6.0)",
    "timedelta (>=2020.12.3,<2021.0.0)",
    "wraps (>=0.15.0,<0.16.0)",
    "poetry (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
